# eval-ab-3d-mot

./: .bumpversion.toml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: unittest.yml
docs/: CHANGELOG.md  README.md  _config.yml  index.markdown  index.md
docs/_posts/: 2025-12-09-welcome-to-jekyll.markdown
docs/source/: conf.py  index.rst
src/eval_ab_3d_mot/: __init__.py  association_quality.py  box_overlap.py  cmd_line.py  evaluate.py  evaluate_and_report.py  kitti_category.py  main.py  stat.py  thresholds.py  track_data.py  tracking_evaluation.py
src/eval_ab_3d_mot/core/: filter_low_confidence.py  tracking_evaluation.py
test/: test_association_quality.py  test_box_overlap.py  test_cli_main.py  test_cmd_line.py  test_print_entry.py  test_run_nu_scenes_1_757.py  test_stat.py  test_thresholds.py  test_track_data.py
test/cli/ab_3d_mot/: test_run_ab_3d_mot_main.py
test/cli/batch_ab_3d_mot/: test_batch_ab_3d_mot.py  test_cmd_line.py  test_cmd_line_object.py
test/cli/batch_eval_ab_3d_mot/: test_get_cmd_line.py
test/cli/clavia/: conftest.py  test_clavia_main.py  test_cmd_line_object.py  test_tracker_factory.py
test/cli/common/: conftest.py  test_annotation_num_frames.py  test_common.py  test_kitti_category.py  (+6 more)
test/evaluate/: test_absent_tracking.py  test_normal.py
test/track_data/: test_magics.py
test/tracking_evaluation/: conftest.py  test_compute_3rd_party_metrics.py  test_dc_is_loose.py  test_fail_to_associate.py  test_get_classes.py  test_ignored_trackers.py  test_init.py  test_load_data.py  test_load_data_internal.py  test_reset.py
(+47 files in other folders)
